--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-# REACT_APP_PRIMARY_API_URL=https://final-project-backend-fznq.onrender.com
+VITE_PRIMARY_API_URL=https://final-project-backend-fznq.onrender.com
